manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: "my-web-app"
  name: "my-web-app"
  namespace: my-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "my-web-app"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "my-web-app"
    spec:
      containers:
        - name: "my-web-app"
          image: "jjmwebappregistry.azurecr.io/sampleapp:c8548f6b72271c2ce2f8c12cd7258575f24a4473"
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1"
