manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: "my-web-app"
  name: "my-web-app"
  namespace: my-web-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: "my-web-app"
