manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-app-ingress
  namespace: my-web-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - my-web-app.jackjj.store
    secretName: my-web-app-tls
  rules:
  - host: my-web-app.jackjj.store
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: my-web-app
              port:
                name: https
